--- a/journal/202110.md
+++ b/journal/202110.md
@@ -39,6 +39,13 @@ _dcrd is a full node implementation that powers Decred's peer-to-peer network ar
 
 - {}
 
+@rstaudt2 [shared](https://twitter.com/rstaudt2/status/1443956206473711617) and educational thread about what "UTXO cache" is, how Decred's implementation compares to Bitcoin Core's, and how it will be key to improving sync performance in the upcoming v1.7.
+
+fuzz testing:
+
+- https://github.com/degeri/dcrd-continuous-fuzz
+- https://matrix.to/#/!zefvTnlxYHPKvJMThI:decred.org/$H-xE3xIdE8-0WXPnk91Ft7T5g5w5TDLFDFROou2b8Ww
+
 <a id="dcrwallet" />
 
 **[dcrwallet](https://github.com/decred/dcrwallet)**
@@ -287,6 +294,8 @@ Node versions as of {date} [snapshot](https://nodes.jholdstock.uk/user_agents) (
 
 { check https://github.com/decred/dcrweb/commits/master to detect added/removed services }
 
+https://support.poloniex.com/hc/en-us/articles/4410229174423-Poloniex-to-cease-services-for-all-users-in-Mainland-China
+
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
 
@@ -300,6 +309,8 @@ Warning: the authors of the Decred Journal have no idea about the trustworthines
 Attended:
 
 - {dates} - [{title}]({event link}) - {city}, {country}. {recap}
+
+- yacht conf?! https://matrix.to/#/!rLQWsgjPJFAClvskmU:decred.org/$2dvZR8DoG_O7PIMCe6qWdr9rj3o2Zj3zhto4h3jjx1w
 
 Upcoming:
 
