--- a/journal/202110.md
+++ b/journal/202110.md
@@ -238,17 +238,19 @@ Community stats as of {date}:
 
 ## Governance
 
-In October the new [treasury](https://dcrdata.decred.org/treasury) received {n} DCR worth ${} at month's average rate of ${}. {} DCR was spent to pay contractors, worth ${} at October's rate, or ${} at September's billing rate of ${}. As of {date}, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is {n} DCR ({n} million USD at ${n.nn}).
+In October the new [treasury](https://dcrdata.decred.org/treasury) received 10,678 DCR worth $1.3 Million at the month's average rate of $121.57. {} DCR was spent to pay contractors, worth ${} at October's rate, or ${} at September's billing rate of ${}. As of Nov 1, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 733,772 DCR (82.5 million USD at $112.42).
 
 { check the legacy treasury for any activity }
 
 { high level recap of decision-making activity and most important events }
 
-- {}
+One [proposal](https://proposals.decred.org/record/c1f5b5c) was submitted this month, @ammarooni returns with a proposal that revises an earlier book [proposal](https://proposals-archive.decred.org/proposals/9e1d644) to remove the book in favor of a steady stream of papers and social media content, memes and meetups. 
+
+The two proposals from @raedah group were voted on this month, the [one](https://proposals.decred.org/record/6db3c4e) for mobile wallets was approved with 97.2% yes votes and 66% turnout, while the [proposal](https://explorer.dcrdata.org/proposal/f7d9fc852e309b31) to continue funding GoDCR was rejected with 49% approval and turnout of 73%.
 
 { check https://github.com/decredcommunity/proposals/commits/master for updates }
 
-See Politeia Digest [issue {}]({}) and [issue {}]({}) for more details on the month's proposals.
+See Politeia Digest [issue 47](https://blockcommons.red/politeia-digest/issue047/) and [issue {}]({}) for more details on the month's proposals.
 
 
 ## Network
