--- a/journal/202110.md
+++ b/journal/202110.md
@@ -55,7 +55,9 @@ Merged changes:
 
 _dcrwallet is a wallet server used by command-line and graphical wallet applications._
 
-- {}
+- implemented [`getblockheader`](https://github.com/decred/dcrwallet/pull/2098) and [`getcurrentnet`](https://github.com/decred/dcrwallet/pull/2102) methods in SPV mode (to be used by DCRDEX)
+- added [`spv`](https://github.com/decred/dcrwallet/pull/2094) field to `walletinfo` result to distinguish between syncing modes
+- fixed [sync loss](https://github.com/decred/dcrwallet/pull/2099) in SPV mode
 
 <a id="dcrctl" />
 
