--- a/journal/202110.md
+++ b/journal/202110.md
@@ -90,7 +90,39 @@ Internal:
 
 _Politeia is Decred's proposal system. It is used to request funding from the Decred treasury._
 
-- {}
+User-facing changes:
+
+- added standard way to show any status change reason (not only censored but now also abandoned and closed)
+- improved [identity error](https://github.com/decred/politeiagui/pull/2623) messages
+- support [multiple](https://github.com/decred/politeiagui/pull/2629) billing status changes. Ideally there should be only one (from Active to Completed or Closed), but this allows to correct admin mistakes. It is also possible to temporarily [disable](https://github.com/decred/politeia/pull/1533) status changes.
+- fixed inability to [comment](https://github.com/decred/politeia/pull/1546) on unvetted proposals
+- ~13 other bug fixes
+
+Changes in `politeiavoter` command-line tool:
+
+- changed [trickling](https://github.com/decred/politeia/pull/1556) method (trickling is slow sending of votes). Previously it has sent votes in a sequence with random time intervals. This has proven to be brittle as one slow/failed send was delaying all other votes. New method uses independent parallel voting processes that start at random times and do not affect each other, making trickling more robust.
+- added an option to abort if vote trickling cannot finish with enough [extra time](https://github.com/decred/politeia/pull/1542) before the vote end. It alarms the user to adjust parameters so that enough time (12 hours by default) is left to retry any failed votes, which may happen over poor connections or Tor.
+- brought back printing of proposal [names](https://github.com/decred/politeia/pull/1548) in `inventory` command
+
+Backend and internal changes:
+
+- added API to get billing [status changes](https://github.com/decred/politeia/pull/1526)
+- allow to fetch billing status changes [in batches](https://github.com/decred/politeia/pull/1535)
+- use response [page size](https://github.com/decred/politeiagui/pull/2622) received from the server
+- added data integrity checks for [`ticketvote`](https://github.com/decred/politeia/pull/1531) and [`comments`](https://github.com/decred/politeia/pull/1544) plugins
+- added a new `pictl` command to test the [RFP flow](https://github.com/decred/politeia/pull/1551)
+- ~4 bug fixes
+
+Refactoring in preparation for the [user layer rewrite](https://github.com/decred/politeia/issues/1479) { this is the master issue, correct? } (largest chunk of work for the [2021 Q3](https://proposals.decred.org/record/91cfcc8) proposal):
+
+- politeiawww codebase reorganized to move legacy APIs into a [`legacy`](https://github.com/decred/politeia/pull/1523) package. This will make it easier to rewrite the user layer to use a plugin architecture and to allow for horizontal scaling.
+- extracted [`logger`](https://github.com/decred/politeia/pull/1527) package to allow plugins configure their logging and become self-contained
+- extracted [`websockets`](https://github.com/decred/politeia/pull/1529) package (will make it easier to scale the servers)
+- extracted [config](https://github.com/decred/politeia/pull/1536) handling into its own package and separated out settings for legacy API for easier removal in the future
+- moved [identity](https://github.com/decred/politeia/pull/1530) handling methods to more appropriate places
+- added a generic [session store](https://github.com/decred/politeia/pull/1555) (will replace the [legacy](https://github.com/decred/politeia/pull/1554) one that did not have proper separation of concerns)
+
+{ image candidates: maybe [2625](https://github.com/decred/politeiagui/pull/2625), or skip this time }
 
 <a id="vspd" />
 
