--- a/journal/202110.md
+++ b/journal/202110.md
@@ -130,7 +130,8 @@ Refactoring in preparation for the [user layer rewrite](https://github.com/decre
 
 _vspd is server software for running a Voting Service Provider. A VSP votes on behalf of its users 24/7 and cannot steal funds._
 
-- {}
+- updated to latest [dcrd RPC](https://github.com/decred/vspd/pull/297) version. Since this commit, vspd will stop working against dcrd v1.6 and start to target the `master` branch.
+- allow setting an [alternative](https://github.com/decred/vspd/pull/287) signing address to support VSP staking with Trezor
 
 <a id="dcrstakepool" />
 
