--- a/journal/202110.md
+++ b/journal/202110.md
@@ -133,37 +133,14 @@ _vspd is server software for running a Voting Service Provider. A VSP votes on b
 - updated to latest [dcrd RPC](https://github.com/decred/vspd/pull/297) version. Since this commit, vspd will stop working against dcrd v1.6 and start to target the `master` branch.
 - allow setting an [alternative](https://github.com/decred/vspd/pull/287) signing address to support VSP staking with Trezor
 
-<a id="dcrstakepool" />
-
-**[dcrstakepool](https://github.com/decred/dcrstakepool)**
-
-_dcrstakepool is server software for running a Voting Service Provider. This was used before vspd and is now referred to as "legacy VSP"._
-
-- {}
-
-<a id="dcrpool" />
-
-**[dcrpool](https://github.com/decred/dcrpool)**
-
-_dcrpool is server software for running a mining pool._
-
-- {}
-
 <a id="dcrlnd" />
 
 **[dcrlnd](https://github.com/decred/dcrlnd)**
 
 _dcrlnd is Decred's Lightning Network node software. LN enables instant and low-cost transactions._
 
-- {}
-
-<a id="cspp" />
-
-**[cspp](https://github.com/decred/cspp)**
-
-_cspp is a server for coordinating coin mixes using the CoinShuffle++ protocol. It is non-custodial, i.e. does not hold any funds._
-
-- {}
+- perform account discovery only [once](https://github.com/decred/dcrlnd/pull/145) for embedded wallets (not applicable to remote wallets that are controlled externally)
+- improved [quickstart](https://github.com/decred/dcrlnd/pull/146) docs and added a new doc summarizing the 4 [operation modes](https://github.com/decred/dcrlnd/blob/master/docs/operation_modes.md) (dcrd or SPV sync, remote or embedded wallet)
 
 <a id="dcrdex" />
 
