--- a/journal/202110.md
+++ b/journal/202110.md
@@ -237,7 +237,7 @@ Other:
 
 { hint: list people who made their first non-trivial commits merged in master branches, in alphabetical order }
 
-Welcome to new first time contributors with code merged to master: {@handle} ([{repo}]({link to user's commits})), ... !
+Welcome to new first time contributors with code merged to master: @AdimekweEbuka ([godcr](https://github.com/planetdecred/godcr/commits?author=AdimekweEbuka))!
 
 Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}). { hint: check the CMS }
 
