--- a/journal/202110.md
+++ b/journal/202110.md
@@ -281,7 +281,7 @@ See Politeia Digest [issue 47](https://blockcommons.red/politeia-digest/issue047
 
 { section hint: use the same `zoom` parameter for all dcrdata links }
 
-**Hashrate**: October's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom={t1}-{t2}&scale=linear&bin=block&axis=time) {set zoom to show the month} opened at ~{n} Ph/s and closed ~{n} Ph/s, bottoming at {n} Ph/s and peaking at {n} Ph/s throughout the month.
+**Hashrate**: October's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=ku5ml4us-kvgwhe37&scale=linear&bin=block&axis=time) opened at ~237 Ph/s and closed ~284 Ph/s, bottoming at 164 Ph/s and peaking at 323 Ph/s throughout the month.
 
 Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on {date}: {PoolName n%, ...}.
 
