--- a/journal/202110.md
+++ b/journal/202110.md
@@ -299,7 +299,7 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zo
 
 **Nodes**: Throughout October there were around 200 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
 
-Node versions as of {date} [snapshot](https://nodes.jholdstock.uk/user_agents) ({} total, dcrd only): { vX.Y.Z - n%, ... }
+Node versions as of Nov 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (245 total, dcrd only): v1.6.2 - 59.4%, v1.7 dev builds - 12.6%, v1.6.0 - 12.29%, v1.6.1 - 9.42%, v1.6 dev builds - 2.8%, v1.5.2 - 2%, v1.5.1 - .8%.
 
 { maybe } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom={t1}-{t2}&bin=day&axis=time&visibility=true-true-true) varied between {n.n}-{n.n}%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&zoom={t1}-{t2}&bin=day&axis=time) varied between {n}-{n}K DCR.
 
