--- a/journal/202110.md
+++ b/journal/202110.md
@@ -6,7 +6,8 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 Highlights for October: {
 
-- 
+- Bitcoin SPV and BTC registration fees merged in DCRDEX
+- maybe summarize that things are shaping up for the next release
 
 }
 
@@ -148,7 +149,28 @@ _dcrlnd is Decred's Lightning Network node software. LN enables instant and low-
 
 _DCRDEX is a non-custodial exchange for trustless trading, powered by atomic swaps._
 
-- {}
+User-facing changes:
+
+- reworked register flow to accept [assets](https://github.com/decred/dcrdex/pull/1223) other than DCR
+- added [overview](https://github.com/decred/dcrdex/pull/1232) of current prices and 24-hour changes to the left sidebar, and a new subscription to spot price updates for all markets
+- improved [registration](https://github.com/decred/dcrdex/pull/1234) sequence and form design/animations
+- require ["zpub"](https://github.com/decred/dcrdex/pull/1255) extended public keys but offer to convert from "xpub" for convenience. This is for server operators willing to accept registration fees in BTC.
+- added [Bitcoin SPV](https://github.com/decred/dcrdex/pull/1230) support to trade against BTC without managing a full Bitcoin blockchain. Built on top of [Neutrino](https://github.com/lightninglabs/neutrino) and [btcwallet](https://github.com/btcsuite/btcwallet) (_old investment paying off!_).
+- start BTC SPV wallet [scan](https://github.com/decred/dcrdex/pull/1249) from a certain date to save time
+- ~6 bug fixes
+
+Internal changes:
+
+- support multiple [HD accounts](https://github.com/decred/dcrdex/pull/1210) for same DEX seed, to allow registering additional accounts after initial account is suspended. This change also retires legacy accounts with random keys to ensure all new accounts can be derived from app seed.
+- refactored client DCR backend to support alternative [wallet](https://github.com/decred/dcrdex/pull/1227) implementations. This will be used to integrate DCRDEX into GoDCR.
+
+Progress towards Ethereum support:
+
+- implemented several [backend methods](https://github.com/decred/dcrdex/issues/1154) ([swap](https://github.com/decred/dcrdex/pull/1218) and [redeem](https://github.com/decred/dcrdex/pull/1219) estimations, order [funding](https://github.com/decred/dcrdex/pull/1221), message [signing](https://github.com/decred/dcrdex/pull/1228), and more)
+- added function to initiate [batch](https://github.com/decred/dcrdex/pull/1251) multiple swaps in the same transaction (saves gas)
+- [derive](https://github.com/decred/dcrdex/pull/1225) the internal Ethereum wallet from app seed
+
+{ image candidates: 1232, from twitter }
 
 <a id="dcrandroid" />
 
