--- a/journal/202110.md
+++ b/journal/202110.md
@@ -221,47 +221,8 @@ Development continued despite of the second [GoDCR proposal](https://proposals.d
 
 _dcrdata is an explorer for Decred blockchain and off-chain data like Politeia proposals, markets, and more._
 
-- {}
-
-<a id="tinydecred" />
-
-**[TinyDecred](https://github.com/decred/tinydecred)**
-
-_TinyDecred is a toolkit for integrating Decred into Python projects. It includes an experimental light GUI wallet based on PyQt5._
-
-- {}
-
-<a id="dcrros" />
-
-**[dcrros](https://github.com/decred/dcrros)**
-
-_dcrros is a middleware service that provides access to the Decred network via Rosetta API._
-
-- {}
-
-<a id="dcrdocs" />
-
-**[dcrdocs](https://github.com/decred/dcrdocs)**
-
-_dcrdocs is the source code for Decred [user documentation](https://docs.decred.org/)._
-
-- {}
-
-<a id="dcrdevdocs" />
-
-**[dcrdevdocs](https://github.com/decred/dcrdevdocs)**
-
-_dcrdevdocs is the source code for Decred [developer documentation](https://devdocs.decred.org/)._
-
-- {}
-
-<a id="dcrweb" />
-
-**[decred.org](https://github.com/decred/dcrweb)**
-
-_dcrweb is the source code for the decred.org website._
-
-- {}
+- updated [Decred](https://github.com/decred/dcrdata/pull/1874) [dependencies](https://github.com/decred/dcrdata/pull/1875)
+- upgraded to [Bootstrap 5](https://github.com/decred/dcrdata/pull/1872)
 
 { check other repos in:
 
