Dev review by davecgh

--- a/journal/202110.md
+++ b/journal/202110.md
@@ -38,10 +38,10 @@ _dcrd is a full node implementation that powers Decred's peer-to-peer network ar
 
 Merged changes:
 
-- updating of indexes (transaction, address, exists address) has been made [asynchronous](https://github.com/decred/dcrd/pull/2219) to speed up the critical path of block validation and connection code { any other big picture or fun stuff to mention for it? and does it help multipeer downloads? }
-- simplified to use only one latest [checkpoint](https://github.com/decred/dcrd/pull/2763), since intermediate checkpoints are no longer necessary with headers-first syncing { any impact on end users to mention, e.g. any perf gains? also, is [2555](https://github.com/decred/dcrd/pull/2555) the best link for "headers-first" sync in dcrd? }
+- updating of indexes (transaction, address, exists address) has been made [asynchronous](https://github.com/decred/dcrd/pull/2219) to speed up the critical path of block validation and connection code. It allows for faster vote propagation and helps pave the way for other optimizations, sync models, and ultimately nicer data corruption recovery mechanisms.
+- simplified to use only one latest [checkpoint](https://github.com/decred/dcrd/pull/2763), since intermediate checkpoints are no longer necessary with [headers-first syncing](https://github.com/decred/dcrd/pull/2555)
 - improved consistency and clarity of `txscript` package [tests](https://github.com/decred/dcrd/pull/2757)
-- fixed handling of automatic ticket revocations when their block is [disconnected](https://github.com/decred/dcrd/pull/2768) { is this for reorg handling? }
+- fixed handling of automatic ticket revocations when their block is [disconnected](https://github.com/decred/dcrd/pull/2768) during a chain reorganization
 - fixed a data [race](https://github.com/decred/dcrd/pull/2758) in peer address management
 - fixed [`findcheckpoint`](https://github.com/decred/dcrd/pull/2759) and [`addblock`](https://github.com/decred/dcrd/pull/2760) tools
 - [libFuzzer](https://llvm.org/docs/LibFuzzer.html) support has been added to dcrd's [continuous fuzzing](https://github.com/degeri/dcrd-continuous-fuzz) test suite
@@ -445,6 +445,6 @@ Most information from third parties is relayed directly from source after a mini
 Credits (alphabetical order):
 
 - writing and editing: {}
-- reviews and feedback: {}
+- reviews and feedback: davecgh
 - title image: {}
 - funding: Decred stakeholders
