Dev review by lukebp

--- a/journal/202110.md
+++ b/journal/202110.md
@@ -88,10 +88,11 @@ _Politeia is Decred's proposal system. It is used to request funding from the De
 
 User-facing changes:
 
-- added standard way to show any status change reason (not only censored but now also abandoned and closed)
-- support [multiple](https://github.com/decred/politeiagui/pull/2629) billing status changes. Ideally there should be only one (from Active to Completed or Closed), but this allows to correct admin mistakes. It is also possible to temporarily [disable](https://github.com/decred/politeia/pull/1533) status changes.
-- improved [identity error](https://github.com/decred/politeiagui/pull/2623) messages
-- ~14 bug fixes
+- added a standard way to show any status change. Admin that censored or abandoned the proposal is displayed along with the reason they gave for the status change.
+- support [multiple](https://github.com/decred/politeiagui/pull/2629) billing status changes. The default is to only allow a single billing status change (from Active to Completed or Closed), but it is a configurable setting. If an admin makes a mistake, the sysadmin can temporarily update the setting to allow for the mistake to be corrected. It is also possible to temporarily [disable](https://github.com/decred/politeia/pull/1533) status changes.
+- improved and standardized the [identity error](https://github.com/decred/politeiagui/pull/2623). The same error is now displayed anytime the user attempts to write data to Politeia without their active identity being loaded in the browser. The error message directs to user details page to fix the issue.
+- fixed multiple [comment navigation](https://github.com/decred/politeiagui/pull/2638) UX issues: filtering preferences being lost, Go Back button not working properly, slow loading of individual threads, UI flickering
+- ~5 other bug fixes
 
 Changes in `politeiavoter` command-line tool:
 
@@ -445,6 +446,6 @@ Most information from third parties is relayed directly from source after a mini
 Credits (alphabetical order):
 
 - writing and editing: {}
-- reviews and feedback: davecgh
+- reviews and feedback: davecgh, lukebp
 - title image: {}
 - funding: Decred stakeholders
