add gov spending figures

--- a/journal/202110.md
+++ b/journal/202110.md
@@ -238,7 +238,7 @@ Community stats as of Nov 2:
 
 ## Governance
 
-In October the new [treasury](https://dcrdata.decred.org/treasury) received 10,678 DCR worth $1.3 Million at the month's average rate of $121.57. {} DCR was spent to pay contractors, worth ${} at October's rate, or ${} at September's billing rate of $139.56. As of Nov 1, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 733,772 DCR (82.5 million USD at $112.42).
+In October the new [treasury](https://dcrdata.decred.org/treasury) received 10,678 DCR worth $1.3 Million at the month's average rate of $121.57. 974 DCR was spent to pay contractors, worth $118K at October's rate, or $136K at September's billing rate of $139.56. As of Nov 1, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 733,772 DCR (82.5 million USD at $112.42).
 
 One [proposal](https://proposals.decred.org/record/c1f5b5c) was submitted this month, @ammarooni returns with a proposal that revises an earlier book [proposal](https://proposals.decred.org/proposals/9e1d644) to remove the book in favor of a steady stream of papers and social media content, memes and meetups. 
 
