--- a/journal/202110.md
+++ b/journal/202110.md
@@ -249,21 +249,15 @@ See Politeia Digest [issue 47](https://blockcommons.red/politeia-digest/issue047
 
 ## Network
 
-{ section hint: use the same `zoom` parameter for all dcrdata links }
-
 **Hashrate**: October's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=ku5ml4us-kvgwhe37&scale=linear&bin=block&axis=time) opened at ~237 Ph/s and closed ~284 Ph/s, bottoming at 164 Ph/s and peaking at 323 Ph/s throughout the month.
 
 Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Nov 1: F2Pool 50%, AntPool 17%, BTC.com 11%, Luxor 10%, ViaBTC 10%, HuobiPool 0.8%, OKEx 0.6%, CoinMine 0.3%. 29% is unknown. { unknown computes to 0.3%, and it differs a lot from mined blocks. please verify }
-
-{ hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Nov 1: Poolin 42%, F2Pool 31%, Antpool 9%, BTC.com 7%, Luxor 5%, ViaBTC 5%, OKEx 0.7%, unknown 0.3%.
 
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&zoom=ku5ml4us-kvgwhe37&axis=time&visibility=true-true&mode=stepped) varied between 139.7-209.7 DCR, with 30-day [average](https://dcrstats.com/) at 191.6 DCR (-7.8).
 
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=ku5ml4us-kvgwhe37&scale=linear&bin=block&axis=time) was 7.65-8.20 million DCR, meaning that 56.7-61.1% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=ku5ml4us-kvgwhe37&scale=linear&bin=block&axis=time) in proof-of-stake.
-
-{ recap of ticket price action if it was interesting }
 
 { image: dcrdata stake% shot }
 
@@ -274,6 +268,8 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zo
 Node versions as of Nov 1 [snapshot](https://nodes.jholdstock.uk/user_agents) (245 total, dcrd only): v1.6.2 - 59%, v1.7 dev builds - 13%, v1.6.0 - 12%, v1.6.1 - 9%, v1.6 dev builds - 3%, v1.5.2 - 2%, v1.5.1 - 0.8%.
 
 The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q3lq8-l0s732o6&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 52.3-54.4% and set a new all-time high with the sum of mixed unspent coins above 7.3 million.
+
+{ image: dcrdata mixed% shot }
 
 { any interesting analysis or events in the network }
 
