Net use another PoW pool snapshot

--- a/journal/202110.md
+++ b/journal/202110.md
@@ -251,7 +251,7 @@ See Politeia Digest [issue 47](https://blockcommons.red/politeia-digest/issue047
 
 **Hashrate**: October's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&zoom=ku5ml4us-kvgwhe37&scale=linear&bin=block&axis=time) opened at ~237 Ph/s and closed ~284 Ph/s, bottoming at 164 Ph/s and peaking at 323 Ph/s throughout the month.
 
-Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Nov 1: F2Pool 50%, AntPool 17%, BTC.com 11%, Luxor 10%, ViaBTC 10%, HuobiPool 0.8%, OKEx 0.6%, CoinMine 0.3%. 29% is unknown. { unknown computes to 0.3%, and it differs a lot from mined blocks. please verify }
+Distribution of hashrate [reported](https://miningpoolstats.stream/decred) by the pools on Nov 1: Poolin 43%, F2Pool 29%, AntPool 10%, BTC.com 6.4%, ViaBTC 6%, Luxor 4.5%, HuobiPool 0.5%, OKEx 0.4%, CoinMine 0.2%
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Nov 1: Poolin 42%, F2Pool 31%, Antpool 9%, BTC.com 7%, Luxor 5%, ViaBTC 5%, OKEx 0.7%, unknown 0.3%.
 
