--- a/journal/202110.md
+++ b/journal/202110.md
@@ -261,7 +261,7 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zo
 
 { image: dcrdata stake% shot }
 
-**VSP**: On Nov 1, ~7,400 (-200) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers and 224 (+4) by listed legacy dcrstakepool servers. Collectively the 7 legacy and 15 new VSPs managed ~23.4% (+4.4%) of the ticket pool. { to be 23.4%, the ~7600 tix must have a pool size of ~32,500 - verify }
+**VSP**: On Nov 1, ~7,400 (-200) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers and 224 (+4) by listed legacy dcrstakepool servers. Collectively the 7 legacy and 15 new VSPs managed 18.9% (-0.1%) of the ticket pool.
 
 **Nodes**: Throughout October there were around 200 reachable nodes according to [dcrextdata](https://dcrextdata.planetdecred.org/nodes).
 
