--- a/journal/202110.md
+++ b/journal/202110.md
@@ -8,6 +8,8 @@ Highlights for October: {
 
 - Bitcoin SPV and BTC registration fees merged in DCRDEX
 - maybe summarize that things are shaping up for the next release
+- Politeia celebrated its third year of operation
+- mobile wallets funded for another year, GoDCR rejected but is preparing a revised proposal
 
 }
 
@@ -156,7 +158,7 @@ User-facing changes:
 
 Internal changes:
 
-- support multiple [HD accounts](https://github.com/decred/dcrdex/pull/1210) for same DEX seed, to allow registering additional accounts after initial account is suspended. This change also retires legacy accounts with random keys to ensure all new accounts can be derived from app seed.
+- support multiple [HD accounts](https://github.com/decred/dcrdex/pull/1210) for same app seed, to allow registering additional accounts after initial account is suspended. This change also retires legacy accounts with random keys to ensure all new accounts can be derived from app seed.
 - refactored client DCR backend to support alternative [wallet](https://github.com/decred/dcrdex/pull/1227) implementations. This will be used to integrate DCRDEX into GoDCR.
 
 Progress towards Ethereum support:
@@ -246,6 +248,18 @@ The two proposals from @raedah were voted on this month, the [one](https://propo
 
 See Politeia Digest [issue 47](https://blockcommons.red/politeia-digest/issue047/) and [issue 48](https://blockcommons.red/politeia-digest/issue048/) for more details on the month's proposals.
 
+@richardred published numbers and graphs for Politeia's [third year](https://blockcommons.red/publication/politeia-at-3/). A few highlights:
+
+- third year: 31 proposals published, 20 approved, 11 rejected, 2 abandoned
+- average (mean) voter participation improved considerably with 46% in year 3, compared to 31% in year 1 and 28% in year 2
+- software development proposals have increased in count, budgets, and support
+- { maybe add a similar 1-sentence recap of how Marketing proposals have changed, I didnt grasp the big picture - @bee }
+- the proportion of proposals from people who are already contractors has gone up from 48% in year 2 to 77% in year 3
+- the number of mixed tickets (those with extra privacy) has been increasing
+- all-time (3 years): 128 proposals published, of which 66 approved, 42 rejected, 20 abandoned
+
+{ image: maybe some chart from year 3 report }
+
 
 ## Network
 
@@ -298,6 +312,18 @@ Secured the following news articles:
 
 - The news about Decred reaching 77% voter participation and marking three years of Politeia was covered by [Crowdfund Insider](https://www.crowdfundinsider.com/2021/10/182204-decentralized-digital-currency-project-decred-dcr-reaches-governance-milestone-of-77-voter-participation/)
 
+> 👂Ever heard of the great #Decred hack?
+> 
+> How about the recent #Decred rug pull?
+> 
+> Yeah, me neither because they don't exist.
+> 
+> #Decred has recently produced it's 600 000th block.
+> 
+> That's 600 fucking thousand bullshit free blocks.
+> 
+> Congrats to the team, stakers and visionaries. 🎖️ ([@cryptotivo](https://twitter.com/cryptotivo/status/1451632443665047557))
+
 
 ## Events
 
@@ -324,11 +350,11 @@ Upcoming:
 
 Selected articles:
 
-- {}
+- Year three of Decred's Politeia in numbers and graphs by @richardred ([blockcommons.red](https://blockcommons.red/publication/politeia-at-3/))
 
 Videos:
 
-- {}
+- GoDCR demo Oct 9 https://twitter.com/planetdecred/status/1446927031887745027
 
 Audio:
 
