--- a/journal/202110.md
+++ b/journal/202110.md
@@ -92,13 +92,13 @@ User-facing changes:
 
 - added a standard way to show any status change. Admin that censored or abandoned the proposal is displayed along with the reason they gave for the status change.
 - support [multiple](https://github.com/decred/politeiagui/pull/2629) billing status changes. The default is to only allow a single billing status change (from Active to Completed or Closed), but it is a configurable setting. If an admin makes a mistake, the sysadmin can temporarily update the setting to allow for the mistake to be corrected. It is also possible to temporarily [disable](https://github.com/decred/politeia/pull/1533) status changes.
-- improved and standardized the [identity error](https://github.com/decred/politeiagui/pull/2623). The same error is now displayed anytime the user attempts to write data to Politeia without their active identity being loaded in the browser. The error message directs to user details page to fix the issue.
+- improved and standardized the [identity error](https://github.com/decred/politeiagui/pull/2623). The same error is now displayed anytime the user attempts to write data to Politeia without their active identity being loaded in the browser. The error message directs to the user details page to fix the issue.
 - fixed multiple [comment navigation](https://github.com/decred/politeiagui/pull/2638) UX issues: filtering preferences being lost, Go Back button not working properly, slow loading of individual threads, UI flickering
 - ~5 other bug fixes
 
 Changes in `politeiavoter` command-line tool:
 
-- changed [trickling](https://github.com/decred/politeia/pull/1556) method (trickling is slow sending of votes). Previously it has sent votes in a sequence with random time intervals. This has proven to be brittle as one slow/failed send was delaying all other votes. New method uses independent parallel voting processes that start at random times and do not affect each other, making trickling more robust.
+- changed [trickling](https://github.com/decred/politeia/pull/1556) method (trickling is slow sending of votes). Previously it has sent votes in a sequence with random time intervals. This has proven to be brittle as one slow/failed send was delaying all other votes. The new method uses independent parallel voting processes that start at random times and do not affect each other, making trickling more robust.
 - added an option to abort if vote trickling cannot finish with enough [extra time](https://github.com/decred/politeia/pull/1542) before the vote end. It alarms the user to adjust parameters so that enough time (12 hours by default) is left to retry any failed votes, which may happen over poor connections or Tor.
 - brought back printing of proposal [names](https://github.com/decred/politeia/pull/1548) in `inventory` command
 
@@ -114,7 +114,7 @@ Backend and internal changes:
 Refactoring in preparation for the [user layer rewrite](https://github.com/decred/politeia/issues/1479) { this is the master issue, correct? } (largest chunk of work for the [2021 Q3](https://proposals.decred.org/record/91cfcc8) proposal):
 
 - politeiawww codebase reorganized to move legacy APIs into a [`legacy`](https://github.com/decred/politeia/pull/1523) package. This will make it easier to rewrite the user layer to use a plugin architecture and to allow for horizontal scaling.
-- extracted [`logger`](https://github.com/decred/politeia/pull/1527) package to allow plugins configure their logging and become self-contained
+- extracted [`logger`](https://github.com/decred/politeia/pull/1527) package to allow plugins to configure their logging and become self-contained
 - extracted [`websockets`](https://github.com/decred/politeia/pull/1529) package (will make it easier to scale the servers)
 - extracted [config](https://github.com/decred/politeia/pull/1536) handling into its own package and separated out settings for legacy API for easier removal in the future
 - moved [identity](https://github.com/decred/politeia/pull/1530) handling methods to more appropriate places
@@ -158,7 +158,7 @@ User-facing changes:
 
 Internal changes:
 
-- support multiple [HD accounts](https://github.com/decred/dcrdex/pull/1210) for same app seed, to allow registering additional accounts after initial account is suspended. This change also retires legacy accounts with random keys to ensure all new accounts can be derived from app seed.
+- support multiple [HD accounts](https://github.com/decred/dcrdex/pull/1210) for the same app seed, to allow registering additional accounts if the initial account is suspended. This change also retires legacy accounts with random keys to ensure all new accounts can be derived from app seed.
 - refactored client DCR backend to support alternative [wallet](https://github.com/decred/dcrdex/pull/1227) implementations. This will be used to integrate DCRDEX into GoDCR.
 
 Progress towards Ethereum support:
@@ -199,18 +199,18 @@ User-facing changes:
 
 Internal changes:
 
-- implemented a custom clickable [highlight](https://github.com/planetdecred/godcr/pull/630) effect with configurable color and borders, and reused it across the app
+- implemented a custom clickable [highlight](https://github.com/planetdecred/godcr/pull/630) effect with configurable color and borders and reused it across the app
 - updated to latest [Gio](https://github.com/planetdecred/godcr/pull/665) and removed code that is no longer needed
 - support custom icons on [input fields](https://github.com/planetdecred/godcr/pull/677)
 
 Merged in [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) library (shared by Android/iOS wallets and GoDCR):
 
 - updated to [latest](https://github.com/planetdecred/dcrlibwallet/pull/209) dcrd, dcrwallet, and dcrdata modules
-- added function to get the [timestamp](https://github.com/planetdecred/dcrlibwallet/pull/208) of last sync with Politeia
+- added function to get the [timestamp](https://github.com/planetdecred/dcrlibwallet/pull/208) of the last sync with Politeia
 
 { image candidates: 663, 646(comment), 664 any better shots? }
 
-Development continued despite of the second [GoDCR proposal](https://proposals.decred.org/record/f7d9fc8) getting rejected (49% Yes). Look forward for the revised version and new app builds.
+Development continued despite the second [GoDCR proposal](https://proposals.decred.org/record/f7d9fc8) getting rejected (49% Yes). Look forward to the revised version and new app builds.
 
 <a id="dcrdata" />
 
@@ -292,7 +292,7 @@ The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&z
 
 Legacy VSP stakepool.eu has been [removed](https://github.com/decred/dcrwebapi/pull/153) from the [VSP list](https://decred.org/vsp/) to facilitate user migration to the new [vspd system](https://blog.decred.org/2020/06/02/A-More-Private-Way-to-Stake/). It is still online to vote the remaining live tickets (7 as of Nov 1). The VSP launched in May 2016 with codename `India`, only 3 months after Decred was born. Thank you for 5 years of service!
 
-Legacy VSP from 99split.com has handled its final live ticket and was shutdown. It has served since late 2019 and was one of the few vendors to actively support [ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher) by coordinating sessions and creating user-friendly [video](https://www.youtube.com/watch?v=StF7GF5W_eM) [tutorials](https://www.youtube.com/watch?v=QOBjep3Ll7E) for setting it up. Users are welcome at its new [vspd instance](https://vspd.99split.com/) with 0.99% fee and 1.7K voted tickets.
+Legacy VSP from 99split.com has handled its final live ticket and was shutdown. It has served since late 2019 and was one of the few vendors to actively support [ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher) by coordinating sessions and creating user-friendly [video](https://www.youtube.com/watch?v=StF7GF5W_eM) [tutorials](https://www.youtube.com/watch?v=QOBjep3Ll7E) for setting it up. Users are welcome at its new [vspd instance](https://vspd.99split.com/) with a 0.99% fee and 1.7K voted tickets.
 
 For anyone still using legacy VSP, it is recommended to switch to [vspd providers](https://decred.org/vsp/) to avoid the risk of missed tickets, e.g. in case the legacy VSP shuts down or stops working with the coming consensus upgrades. As of Nov 1, all legacy VSPs managed less than 260 tickets or 0.6% of the ticket pool.
 
@@ -318,7 +318,7 @@ Secured the following news articles:
 > 
 > Yeah, me neither because they don't exist.
 > 
-> #Decred has recently produced it's 600 000th block.
+> #Decred has recently produced its 600 000th block.
 > 
 > That's 600 fucking thousand bullshit free blocks.
 > 
@@ -407,15 +407,15 @@ Zcash has been polling its coinholders again, this time on the subject of whethe
 
 Sam Altman and other Silicon Valley VCs [revealed](https://www.coindesk.com/tech/2021/10/25/why-everyone-is-mad-at-sam-altmans-worldcoin/) their vision for a universal basic income that people must submit unique eyeball hashes to claim, and privacy advocates have piled on to say it's a bad idea. Notable features are the orb-shaped eyeball scanners, reminiscent of dystopian science fiction, and the 20% VC premine.
 
-The latest DeFi airdrop farming [controversy](https://www.coindesk.com/tech/2021/10/08/airdrop-ethics-vc-firm-draws-ire-following-25m-ribbon-finance-exploit/) concerns Ribbon Finance, where one researcher from Divergence Ventures successfully met the qualifying criteria with hundreds of different wallets, and received tokens worth $2.5 million. An independent researcher noticed the pattern and identified the wallet owner through association with an ENS domain, they [suggested](https://twitter.com/gabagooldoteth/status/1446498569603756033) copytrading them on twitter, but it blew up and Divergence Ventures ended up giving back all the airdropped tokens. 
+The latest DeFi airdrop farming [controversy](https://www.coindesk.com/tech/2021/10/08/airdrop-ethics-vc-firm-draws-ire-following-25m-ribbon-finance-exploit/) concerns Ribbon Finance, where one researcher from Divergence Ventures successfully met the qualifying criteria with hundreds of different wallets and received tokens worth $2.5 million. An independent researcher noticed the pattern and identified the wallet owner through association with an ENS domain, they [suggested](https://twitter.com/gabagooldoteth/status/1446498569603756033) copytrading them on twitter, but it blew up and Divergence Ventures ended up giving back all the airdropped tokens. 
 
-Cream Finance has been [hacked](https://rekt.news/cream-rekt-2/) for $130 million, which is the second major hack in the last 3 months. This attack used a flash loan to repeatedly lend and borrow funds across two addresses, and took advantage of a pricing vulnerability to drain many of Cream's liquidity pools. [Analysis](https://mudit.blog/cream-hack-analysis/) by a DeFi insider suggests that this hack was executed by a skilled DeFi developer, likely working on a rival project. The attacker also left a cryptic message which appeared to taunt a list of projects and blame yearn developers, and some DeFi developers have started referring to a "[war](https://decrypt.co/84840/behind-defi-war-words-aave-yearn)" in their tweets.
+Cream Finance has been [hacked](https://rekt.news/cream-rekt-2/) for $130 million, which is the second major hack in the last 3 months. This attack used a flash loan to repeatedly lend and borrow funds across two addresses and took advantage of a pricing vulnerability to drain many of Cream's liquidity pools. [Analysis](https://mudit.blog/cream-hack-analysis/) by a DeFi insider suggests that this hack was executed by a skilled DeFi developer, likely working on a rival project. The attacker also left a cryptic message which appeared to taunt a list of projects and blame yearn developers, and some DeFi developers have started referring to a "[war](https://decrypt.co/84840/behind-defi-war-words-aave-yearn)" in their tweets.
 
 The DeFi protocol Indexed Finance was [hacked](https://decrypt.co/83681/defi-protocol-indexed-finance-hacked-for-16-million-team-finds-hacker) for $16 million, but [identified](https://cryptobriefing.com/inside-the-war-room-how-indexed-finance-traced-its-16m-hacker/) the attacker. The [story](https://cryptobriefing.com/inside-the-war-room-how-indexed-finance-traced-its-16m-hacker/) of how the attacker was identified is an interesting one, involving an edit to Wikipedia which they made to describe themselves as a "notable mathematician". It subsequently transpired that the attacker is a [teenager](https://www.coindesk.com/tech/2021/10/22/after-stealing-16m-this-teen-hacker-seems-intent-on-testing-code-is-law-in-the-courts/), and rather than hand the funds back, or 90%, they have decided to test the "code is law" conjecture in court to see if they can keep their flash loan bounty.
 
 The Creature Toadz NFT community was [scammed](https://cryptobriefing.com/hacker-admits-to-stealing-88-eth-then-returns-it/) by an attacker who posted a fake minting link in their Discord - in the 45 minutes before it was taken down 88 ETH was sent to the attacker. The funds were quickly returned after the hacker's identity was discovered.
 
-In the dog eat dog world of [dog money](https://www.youtube.com/watch?v=cbI31x3FpS0), AnubisDAO executed a speedy [rug pull](https://decrypt.co/84924/anubisdao-investors-lose-60-million-in-alleged-rug-pull) with $60 million of investors' money, 20 hours into the initial token sale for this new dog token with no website. There is some dispute over whether the attack was executed by a project insider, or someone who phished a project insider.
+In the dog eat dog world of [dog money](https://www.youtube.com/watch?v=cbI31x3FpS0), AnubisDAO executed a speedy [rug pull](https://decrypt.co/84924/anubisdao-investors-lose-60-million-in-alleged-rug-pull) with $60 million of investors' money, 20 hours into the initial token sale for this new dog token with no website. There is some dispute over whether the attack was executed by a project insider or someone who phished a project insider.
 
 { governance, funding, chain forks, community splits }
 
@@ -431,7 +431,7 @@ Popular patronage service Patreon is [considering](https://decrypt.co/84831/patr
 
 The infamous $1 trillion infrastructure bill has returned to the house of representatives and someone has discovered an even more egregious anti-crypto provision: [6050I](https://unchainedpodcast.com/not-reporting-info-on-some-transaction-partners-could-soon-be-a-felony/). This provision would require recipients of digital assets to, in many cases, collect a variety of information about the sender and report this to the IRS within 15 days. This provision has only recently been discovered, but it is [apparently](https://twitter.com/jchervinsky/status/1456275741398683648) already too late to do anything about amending the infrastructure bill on its passage through the house of representatives.
 
-The latest crypto [fad](https://www.wsj.com/articles/tungsten-cubes-bitcoin-gamestop-crypto-investors-11635431036) is not a new blockchain but small blocks of tungsten, which people are buying to touch and hold. It didn't take long for someone to come up with a [Tungsten DAO](https://twitter.com/tungsten_dao) which has minted an NFT representing a very large block of tungsten, and [sold](https://www.theverge.com/2021/11/3/22761305/tungsten-cube-meme-nft-crypto-midwest) this for $250,000, to a holder who is entitled to visit it once a year for looking and touching (it's too heavy to hold, or deliver).
+The latest crypto [fad](https://www.wsj.com/articles/tungsten-cubes-bitcoin-gamestop-crypto-investors-11635431036) is not a new blockchain but small blocks of tungsten, which people are buying to touch and hold. It didn't take long for someone to come up with a [Tungsten DAO](https://twitter.com/tungsten_dao) which has minted an NFT representing a very large block of tungsten, and [sold](https://www.theverge.com/2021/11/3/22761305/tungsten-cube-meme-nft-crypto-midwest) this for $250,000, to a holder who is entitled to visit it once a year for looking and touching (it's too heavy to hold or deliver).
 
 That's all for October. Share your updates for the next issue in our [#journal](https://chat.decred.org/#/room/#journal:decred.org) chat room.
 
