--- a/journal/202110.md
+++ b/journal/202110.md
@@ -312,6 +312,10 @@ Secured the following news articles:
 
 - The news about Decred reaching 77% voter participation and marking three years of Politeia was covered by [Crowdfund Insider](https://www.crowdfundinsider.com/2021/10/182204-decentralized-digital-currency-project-decred-dcr-reaches-governance-milestone-of-77-voter-participation/)
 
+In response to a common question "What's up in Decred and where it is heading?" @bee wrote up a not-too-technical [summary](https://www.reddit.com/r/decred/comments/q1402a/weekly_many_musings_mondays/hfji878/) of recent developments and mid-term goals.
+
+@cryptotivo congratulates everyone with 600K "boring" blocks:
+
 > 👂Ever heard of the great #Decred hack?
 > 
 > How about the recent #Decred rug pull?
@@ -351,6 +355,8 @@ Upcoming:
 Selected articles:
 
 - Year three of Decred's Politeia in numbers and graphs by @richardred ([blockcommons.red](https://blockcommons.red/publication/politeia-at-3/))
+- Decred hits governance milestone of 77% voter participation ([decred.org](https://decred.org/press/2021-10-27_decred_hits_governance_milestone/), altered version published on [crowdfundinsider.com](https://www.crowdfundinsider.com/2021/10/182204-decentralized-digital-currency-project-decred-dcr-reaches-governance-milestone-of-77-voter-participation/))
+- The Suppressor part 2: On-chain analysis by @tacorevenge ([medium](https://medium.com/@tacorevenge/the-suppressor-part-2-on-chain-analysis-6561c5a478c4))
 
 Videos:
 
@@ -395,6 +401,8 @@ Selected Twitter discussions:
 In October DCR was trading between USD 102.4-140.1 / BTC 0.001868-0.002571. The average daily rate was $121.57.
 
 { markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis }
+
+https://medium.com/@tacorevenge/the-suppressor-part-2-on-chain-analysis-6561c5a478c4
 
 { dcrdex updates, esp. volume }
 
